@@ -1,5 +1,5 @@
 package App::DoubleUp;
-our $VERSION = '0.2.1';
+our $VERSION = '0.2.2';
 
 use strict;
 use warnings;
